--- a/public/assets/css/stylepartials.css
+++ b/public/assets/css/stylepartials.css
@@ -279,3 +279,31 @@ table td {
     margin-right: auto;
     margin-top: 80px; 
 }
+
+.dropdown-menu .dropdown-item {
+    border-bottom: 1px solid black;
+  }
+  .dropdown-menu .dropdown-item:last-child {
+    border-bottom: none;
+  }
+
+.dropdown-menu {
+    min-width: 100%;
+    /* Sesuaikan lebar dengan kebutuhan Anda */
+}
+
+.dropdown-item {
+    width: 100%;
+    /* Sesuaikan lebar dengan kebutuhan Anda */
+    
+    /* Pusatkan teks pada dropdown item */
+}
+
+
+.urutberdasarkan{
+    height:42px;
+    background-color: #3B4B65; 
+    color:white;
+    border-radius:15px 0 0 15px;
+    font-weight: bold;
+}
