--- a/public/assets/css/stylepartials.css
+++ b/public/assets/css/stylepartials.css
@@ -282,7 +282,7 @@ table td {
     width: 260px; 
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20px; 
+    margin-top: 45px; 
 }
 
 .dropdown-menu .dropdown-item {
@@ -332,3 +332,17 @@ table td {
 .submenu {
     display: none;
 }
+
+.sidebar-wrapper::-webkit-scrollbar {
+    width: 0; /* Lebar scrollbar horizontal */
+  }
+  
+  .sidebar-wrapper::-webkit-scrollbar-thumb {
+    background-color: white; /* Warna tombol scrollbar */
+    border-radius: 4px; /* Sudut tombol scrollbar */
+  }
+  
+  .sidebar-wrapper::-webkit-scrollbar-track {
+    background-color: #f1f1f1; /* Warna track scrollbar */
+  }
+  
