--- a/public/assets/css/stylepartials.css
+++ b/public/assets/css/stylepartials.css
@@ -354,4 +354,16 @@ table td {
   }
   
 
-  
+.berita-title{
+    display: block;
+    font-size:20px;
+    font-weight:bold;
+    text-align: center;
+}
+
+.image-background {
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100%;
+}
