--- a/public/assets/css/stylepartials.css
+++ b/public/assets/css/stylepartials.css
@@ -292,6 +292,13 @@ table td {
     margin-top: 45px; 
 }
 
+.gambar1 {
+    width: 260px; 
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 150px; 
+}
+
 .dropdown-menu .dropdown-item {
     border-bottom: 1px solid black;
   }
