--- a/public/assets/css/paper-dashboard.css
+++ b/public/assets/css/paper-dashboard.css
@@ -4216,3 +4216,8 @@ License - nucleoapp.com/license/
     padding: 15px; } }
 
 /*# sourceMappingURL=paper-dashboard.css.map */
+
+.nav-title{
+  margin-left: 16px;
+  margin-top: 10px;
+}
