penggabungan comit nadya dan okta migrasi tabel testimoni dan inquiries

--- a/public/assets/assets-landing-page/css/tailwind.css
+++ b/public/assets/assets-landing-page/css/tailwind.css
@@ -1371,7 +1371,7 @@ body {
 
 .bg-primary{
   --tw-bg-opacity: 1;
-  background-color: rgb(55 88 249 / var(--tw-bg-opacity));
+  background-color: #3B4B65;
 }
 
 .bg-primary\/5{
