filter, search, alert di feedback

--- a/public/assets/css/stylepartials.css
+++ b/public/assets/css/stylepartials.css
@@ -400,6 +400,14 @@ table td {
     font-style: italic;
 }
 
+.rating-title{
+    display: block;
+    font-size:20px;
+    font-weight:bold;
+    text-align: center;
+    color:black;
+}
+
 .profile-title{
     display: block;
     font-size:20px;
