--- a/public/assets/css/stylepartials.css
+++ b/public/assets/css/stylepartials.css
@@ -451,4 +451,6 @@ table td {
     transform: scale(1.1); /* Mengubah ukuran tautan saat dihover */
   }
 
-
+.font-star{
+    color:#F29F05;font-size: 50px;
+}
