mengirimkan pesan balasan dari kontak us ke gmail terkait

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -90,6 +90,11 @@ body{
     margin-right: 10px;
 }
 
+.lupapassword-title{
+  text-align:center; 
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
 @media screen and (max-width: 768px) {
     .login-form {
       width: 70%;
