--- a/public/assets/css/stylepartials.css
+++ b/public/assets/css/stylepartials.css
@@ -97,12 +97,20 @@
 }
 
   .pesan {
-    resize: both !important; /* Memungkinkan pengguna untuk menarik textarea */
     overflow: auto !important; /* Menampilkan scroll jika konten melebihi ukuran textarea */
-    min-height: 180px !important; /* Tinggi minimum awal textarea */
+    min-height: 360px !important; /* Tinggi minimum awal textarea */
     background-color: #D9D9D9 !important;
     color:black !important;
     font-weight: bold ;
+  }
+
+  .balasan {
+    overflow: auto !important; /* Menampilkan scroll jika konten melebihi ukuran textarea */
+    min-height: 360px !important; /* Tinggi minimum awal textarea */
+    background-color: white !important;
+    color:black !important;
+    font-weight: bold ;
+    text-align: justify;
   }
   
 
@@ -485,3 +493,4 @@ table td {
     font-size: 20px;
     margin-bottom: 10px;
 }
+
