--- a/public/assets/css/stylepartials.css
+++ b/public/assets/css/stylepartials.css
@@ -94,7 +94,11 @@
 
   .kolom{
     background-color:#D9D9D9 !important;
-}
+  }
+
+  .kolom:focus{
+    background-color: white !important;
+  }
 
     .pesan2 {
         overflow: auto !important; /* Menampilkan scroll jika konten melebihi ukuran textarea */
@@ -125,7 +129,7 @@
     min-height: 360px !important; /* Tinggi minimum awal textarea */
     background-color: white !important;
     color:#444444 !important;
-    font-weight: bold ;
+    font-weight: bold !important;
     text-align: justify;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
     transition: background-color 0.3s ease !important;
@@ -137,7 +141,7 @@
     min-height: 360px !important; /* Tinggi minimum awal textarea */
     background-color: white !important;
     color:#444444 !important;
-    font-weight: bold ;
+    font-weight: bold !important;
     text-align: justify;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
     transition: background-color 0.3s ease !important;
