--- a/public/assets/css/stylepartials.css
+++ b/public/assets/css/stylepartials.css
@@ -42,13 +42,6 @@
     width: auto;
 }
   
-.dropdown-menu.dropdown-menu-right .dropdown-item:hover,
-.dropdown-menu.dropdown-menu-right .dropdown-item:active {
-    background-color: #3B4B65; /* Ganti warna latar belakang saat hover atau saat tombol dalam keadaan aktif menjadi warna biru */
-    color: white; /* Ganti warna teks saat hover atau saat tombol dalam keadaan aktif menjadi putih */
-}
-
-
 
 .btn-primary:hover {
     background-color: white;
@@ -62,6 +55,18 @@
     border: none;
     outline: none;
     cursor: pointer;
+}
+
+.ukuran-checkbox{
+    width: 20px; 
+    height: 20px;
+    margin: 0;
+    padding: 0;
+    background: none;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    margin-top: 5px;
 }
 
 .custom-button:hover {
@@ -191,16 +196,6 @@
     color: rgba(94, 94, 94, 1);
     padding-top: 15px;
     padding-bottom: 15px;
-}
-
-.dropdown-menu a {
-    border-bottom: 1px solid #3B4B65; /* Garis bawah untuk setiap item */
-    padding: 5px 10px; /* Jarak di atas dan bawah serta kiri dan kanan item */
-    display: block; /* Membuat item menjadi elemen blok untuk mengisi lebar container */
-}
-
-.dropdown-menu a:last-child {
-    border-bottom: none; /* Menghapus garis bawah dari item terakhir */
 }
 
 .input {
@@ -538,5 +533,15 @@ table td {
     display: block;
     font-size: 20px;
     margin-bottom: 10px;
+}
+
+.tomboltampilkan{
+    display: none;
+    justify-content: flex-end; 
+} 
+
+.gaya-tampilkan{
+    background-color:#03A13B;
+    border-radius:15px; 
 }
 
