--- a/public/assets/css/stylepartials.css
+++ b/public/assets/css/stylepartials.css
@@ -120,8 +120,8 @@ body {
 }
 
 .kolom {
-    background-color: #D9D9D9 !important;
     font-family: 'Poppins', sans-serif !important;
+    background-color: #D9D9D9 !important;
 }
 
 .kolom:focus {
@@ -673,11 +673,19 @@ table td {
     background-color: #3B4B65;
 }
 
-.modalbuttonsuccess-style, .modalbuttondanger-style, .modalbuttonclose-style,.modalbuttonlaporanpalsu{
+.modalbuttonsuccess-style,
+.modalbuttondanger-style,
+.modalbuttonclose-style,
+.modalbuttonlaporanpalsu {
     font-family: 'Poppins', sans-serif;
-    border-radius:10px
+    border-radius: 10px
 }
 
+.select2-container--bootstrap .select2-selection--single {
+    background-color: #d9d9d9;
+}
 
-
+.select2-container--bootstrap .select2-selection--single:focus {
+    background-color: white ;
+}
 
