--- a/public/assets/assets-landing-page/css/tailwind.css
+++ b/public/assets/assets-landing-page/css/tailwind.css
@@ -2132,6 +2132,11 @@ body {
   background-color: rgb(55 88 249 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-secondary:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(19 194 150 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-white:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
