--- a/public/assets/css/stylepartials.css
+++ b/public/assets/css/stylepartials.css
@@ -594,6 +594,13 @@ table td {
     display: none;
 }
 
+.alamat{
+    resize: both !important;
+    overflow: auto !important;
+    min-height: 150px !important;
+    text-align: justify;
+}
+
 .invalid-feedback {
     font-size: 12px;
 }
