--- a/public/assets/css/stylepartials.css
+++ b/public/assets/css/stylepartials.css
@@ -53,7 +53,12 @@ body {
 }
 
 .filter1 {
-    margin-top: 100px;
+    margin-top: 80px;
+    margin-left: 33px;
+}
+
+.filter5{
+    margin-top: 80px;
     margin-left: 40px;
 }
 
@@ -316,6 +321,17 @@ body {
     margin-bottom: 5px;
 }
 
+.navbar-style{
+    visibility: hidden;
+    margin-top:10px;
+    border-radius:10px;
+    text-align:center;
+    width:350px;
+    background-color:#3B4B65; 
+    color:white !important; 
+    font-weight:bold
+}
+
 .alert-container2 {
     display: flex;
     width: 50%;
@@ -428,7 +444,7 @@ table td {
     width: 260px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 45px;
+    margin-top: 30px;
 }
 
 
@@ -470,17 +486,20 @@ table td {
 }
 
 .sidebar-wrapper::-webkit-scrollbar {
-    width: 0;
+    width: 10px; 
+    overflow-y: scroll; 
 }
 
 .sidebar-wrapper::-webkit-scrollbar-thumb {
     background-color: white;
     border-radius: 4px;
+    border: 2px solid #3B4B65; 
 }
 
 .sidebar-wrapper::-webkit-scrollbar-track {
     background-color: #f1f1f1;
 }
+
 
 .berita-title {
     display: block;
@@ -521,14 +540,6 @@ table td {
     margin-top: 40px;
     margin-right: 20px;
     margin-bottom: -10px;
-}
-
-@media screen and (max-width: 768px) {
-    .breadcrumb-container {
-        visibility: hidden;
-    }
-    
-    
 }
 
 
@@ -648,6 +659,7 @@ table td {
     border-radius: 15px 0 0 0;
 }
 
+
 .searchicon-style {
     font-family: 'Poppins', sans-serif;
     border-radius: 0 0 15px 0;
@@ -718,3 +730,36 @@ table td {
     overflow: auto !important; 
 }
 
+.tombol-style{
+    width:125%;
+    font-weight: bold
+}
+
+.filter100{
+    margin-top: 80px;
+    margin-left: 30px;
+}
+
+@media only screen and (max-width: 767px) {
+    .input {
+        width: 100%;
+    }
+    .password-input-wrapper .form-control {
+        max-width: 100%;
+    }
+    .navbar-style{
+        width:270px;
+    }
+    .tombol-style{
+        width: 125%;
+    }
+    .resizable {
+        min-height: 200px !important;
+    }.filter100{
+        margin-top: 0;
+    }.breadcrumb-container {
+        visibility: hidden;
+    }.sidebar-wrapper {
+        overflow-y: scroll;
+    }
+}
