--- a/public/assets/css/stylepartials.css
+++ b/public/assets/css/stylepartials.css
@@ -52,6 +52,11 @@ body {
     margin-left: 27px;
 }
 
+.nomargintop {
+    margin-top:80px;
+    margin-left: 33px;
+}
+
 .filter1 {
     margin-top: 80px;
     margin-left: 33px;
@@ -761,5 +766,7 @@ table td {
         visibility: hidden;
     }.sidebar-wrapper {
         overflow-y: scroll;
+    }.nomargintop {
+        margin-top: 10px;
     }
 }
