--- a/public/assets/css/stylepartials.css
+++ b/public/assets/css/stylepartials.css
@@ -42,11 +42,6 @@ body {
     margin-left: 27px;
 }
 
-.filter {
-    margin-top: 100px;
-    margin-left: 27px;
-}
-
 .filterfeedback {
     margin-top: 90px;
     margin-left: 27px;
@@ -75,9 +70,6 @@ body {
 .wow {
     width: auto;
 }
-
-
-
 
 .btn-primary:hover {
     background-color: white;
@@ -290,7 +282,7 @@ body {
 
 }
 
-.alert-container {
+.alert-failed {
     display: flex;
     width: 100%;
     align-items: center;
@@ -302,7 +294,19 @@ body {
     margin-bottom: 5px;
 }
 
-.alert-container12 {
+.alert-success {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #03A13B !important;
+    color: white;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-bottom: 5px;
+}
+
+.alert-filter {
     display: flex;
     width: 100%;
     align-items: center;
@@ -314,30 +318,7 @@ body {
     margin-bottom: 5px;
 }
 
-.alert-container1 {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    padding: 10px 20px;
-    background-color: #03A13B;
-    color: white;
-    border-radius: 5px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    margin-bottom: 5px;
-}
-
-.navbar-style{
-    visibility: hidden;
-    margin-top:10px;
-    border-radius:10px;
-    text-align:center;
-    width:350px;
-    background-color:#3B4B65; 
-    color:white !important; 
-    font-weight:bold
-}
-
-.alert-container2 {
+.alert-success-akun {
     display: flex;
     width: 50%;
     align-items: center;
@@ -353,6 +334,18 @@ body {
     font-size: 24px;
     margin-right: 10px;
 }
+
+.navbar-style{
+    visibility: hidden;
+    margin-top:10px;
+    border-radius:10px;
+    text-align:center;
+    width:350px;
+    background-color:#3B4B65; 
+    color:white !important; 
+    font-weight:bold
+}
+
 
 .pagination1,
 .pagination2 {
